--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+html,
+body {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .icon {
   margin-top: 0px;
   -webkit-transition: margin-top 0.2s ease-out;
