--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Saira:400|Montserrat:400');
-@import url('helpers.css');
+@import url(fonts.css);
+@import url(helpers.css);
+
 
 html {
   font-size: 100%;
@@ -13,7 +14,7 @@ body {
 /*16px*/
 
 body {
-  font-family: 'Saira', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   line-height: 1.75;
 }
@@ -28,7 +29,7 @@ h3,
 h4,
 h5 {
   margin: 3rem 0 1.38rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'FiraCode', sans-serif;
   font-weight: 400;
   line-height: 1.3;
 }
@@ -75,4 +76,15 @@ small,
 
 .icon:hover {
   margin-top: -5px;
+}
+
+.orange-bar:after {
+  background: #FF5722;
+  content: '';
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 29px;
+  height: 0.6em;
+  z-index: -1;
 }
